Add feature options.
