# router/feature_router.go
@@ -5,8 +5,10 @@ import (
 	"net/http"
 
 	"github.com/authfun/gauthfun/database"
+	"github.com/authfun/gauthfun/model"
 	"github.com/authfun/gauthfun/schema"
 	"github.com/gin-gonic/gin"
+	"github.com/jinzhu/copier"
 	"gorm.io/gorm"
 )
 
@@ -15,7 +17,7 @@ func AddGroupFeature(router *gin.Engine) {
 	group := router.Group("/api/features")
 	{
 		group.GET("", featureList)
-		// group.GET("/options", menuOptions)
+		group.GET("/options", featureOptions)
 		// group.GET("/:id", getMenu)
 		// group.POST("", addMenu)
 		// group.PUT("/:id", updateMenu)
@@ -37,4 +39,23 @@ func featureList(c *gin.Context) {
 		return
 	}
 	c.JSON(http.StatusOK, features)
+}
+
+// @Summary Get feature option
+// @Tags Feature
+// @Accept json
+// @Produce json
+// @Success 200 {array} model.Option
+// @Router /api/features/options [get]
+func featureOptions(c *gin.Context) {
+	var features []schema.Feature
+	result := database.AuthDatabase.Find(&features)
+	if result.Error != nil && errors.Is(result.Error, gorm.ErrRecordNotFound) {
+		InternalServerError(c, result.Error)
+		return
+	}
+
+	var options []model.Option
+	copier.Copy(&options, &features)
+	c.JSON(http.StatusOK, options)
 }
